[ios] Implements reloadCellsForItems on ChromeTableVC

By calling reloadCellsForItems at the cell indexPath, the cell
gets reconfigured and also redrawn since
[tableView reloadRowsAtIndexPaths:withRowAnimation:] is called.
This causes the cell height to adjust to the new content.

Bug: 869838
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Iadd0a7f9a80d321015f654bd51dfeb084861f2cf
Reviewed-on: https://chromium-review.googlesource.com/1159328
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580568}
Former-commit-id: 7e85a974e10c613fe8bf0523c4cd3ef3dfa696be